scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -125,4 +125,22 @@ body {
 
 html {
   background: white;
+  overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  position: fixed;
+  width: 10px; /* Width of the scrollbar */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(95, 100, 105, 1); /* Color of the scrollbar thumb */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Hover color for the thumb */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgba(150, 150, 150, 1);
 }
